Fix reverse on mobile

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -54,7 +54,7 @@
 }
 
 .reverse-on-mobile {
-  @media (min-width: 992px) {
+  @media (max-width: 992px) {
     flex-direction: column-reverse;
   }
 }
